<resources>
    <string name="app_name">Bar Assistant</string>
    <string name="home_tab">Home</string>
    <string name="ingredient_hint">Ingredients to add</string>
    <string name="placeholder_header">Header</string>
    <string name="recipe_name_placeholder">Recipe Name</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="user_profile">User Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_password">Change Password</string>
    <string name="collection_name">%1$s</string>
    <string name="add_email">Add Email</string>
    <string name="see_all">See All</string>
    <string name="ingredients_tab">Ingredients</string>
    <string name="description_header">Description</string>
    <string name="ingredients_header">Ingredients</string>
    <string name="vision_image">Image from camera</string>
    <string name="button_placeholder">Button</string>
    <string name="take_photo">Take Photo</string>
    <string name="shopping_cart_header">Shopping Cart</string>
    <string name="shopping_cart_add_hint">Add to shopping cart…</string>
    <string name="search_title">Search</string>
    <string name="vision_button_placeholder">Button</string>
    <string name="favorites_tab">Favorites</string>
    <string name="recipe_addition_defualt">Click to change me!</string>
    <string name="feed_header">Feed</string>
    <string name="read_for_me">Read For Me</string>
    <string name="share_button">Share</string>
    <string name="ingredient_name_placeholder">Ingredient Name</string>
    <string name="delete_ingredient_description">Delete ingredient</string>
    <string name="username_placeholder">Username</string>
    <string name="add_friend_button">Add Friend</string>
    <string name="friends_header">Friends</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_tab">Account</string>
    <string name="juices">Juices</string>
    <string name="herbs_amp_spices"><![CDATA[Herbs & Spices]]></string>
    <string name="bitters">Bitters</string>
    <string name="sweets">Sweets</string>
    <string name="liqueurs">Liqueurs</string>
    <string name="alcohols">Alcohols</string>
    <string name="syrups">Syrups</string>
    <string name="beverages_amp_flavoring"><![CDATA[Beverages & Flavoring]]></string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="fruits_amp_veggies"><![CDATA[Fruits & Veggies]]></string>
    <string name="confirm">Confirm</string>
</resources>