<?xml version="1.0" encoding="utf-8"?>
    <menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainMenu"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <item
        android:id="@+id/shoppingCartMenuButton"
        android:orderInCategory="100"
        android:icon="@drawable/ic_shopping_cart_black_24dp"
        android:title="@string/shopping_cart"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/searchMenuButton"
        android:orderInCategory="200"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/user_profile"
        android:orderInCategory="300"
        android:icon="@drawable/ic_user_black_24dp"
        android:title="@string/user_profile"
        app:showAsAction="ifRoom" />

</menu>
