<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/profile_name"
        android:textSize="24sp"
        android:textColor="@color/primaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryText"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profile_name"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/add_email"
        android:text="@string/add_email"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_above="@+id/change_password"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/change_password"
        android:text="@string/change_password"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_above="@+id/sign_out"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sign_out"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_out"/>

</RelativeLayout>
