<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/alcoholsLayout"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/fruitsAndVegetablesLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        >

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/alcoholsButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_alcohols"
            android:tint="@color/primaryText"
            android:visibility="visible"
            app:fabSize="normal"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="188dp"
            tools:src="@drawable/ic_alcohols">

        </android.support.design.widget.FloatingActionButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@android:color/transparent"
            android:paddingTop="4dp"
            android:text="@string/alcohols"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/beveragesAndFlavoringLayout"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="132dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/herbsAndSpicesLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/beveragesAndFlavoringButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_beverage"
            android:tint="@color/primaryText"
            android:visibility="visible"
            app:fabSize="normal"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="215dp">

        </android.support.design.widget.FloatingActionButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@android:color/transparent"
            android:paddingTop="2dp"
            android:text="@string/beverages_amp_flavoring"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bittersLayout"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/juicesLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/bittersButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_bitters"
            android:tint="@color/primaryText"
            android:visibility="visible"
            app:fabSize="normal"
            tools:layout_editor_absoluteX="232dp"
            tools:layout_editor_absoluteY="215dp">

        </android.support.design.widget.FloatingActionButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@android:color/transparent"
            android:paddingTop="4dp"
            android:text="@string/bitters"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fruitsAndVegetablesLayout"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:visibility="visible"
        android:weightSum="10000"
        app:layout_constraintBottom_toTopOf="@+id/liqueursLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fruitsAndVegetablesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_fruits_veggies"
            android:tint="@color/primaryText"
            android:visibility="visible"
            app:fabSize="normal"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="247dp">

        </android.support.design.widget.FloatingActionButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@android:color/transparent"
            android:paddingTop="3dp"
            android:text="@string/fruits_amp_veggies"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/herbsAndSpicesLayout"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/miscellaneousLayout"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/herbsAndSpicesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_herbs_spices"
            android:tint="@color/primaryText"
            android:visibility="visible"
            app:fabSize="normal">

        </android.support.design.widget.FloatingActionButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@android:color/transparent"
            android:paddingTop="4dp"
            android:text="@string/herbs_amp_spices"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/juicesLayout"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="13dp"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/sweetsLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/juicesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_juices"
            android:tint="@color/primaryText"
            android:visibility="visible"
            app:fabSize="normal">

        </android.support.design.widget.FloatingActionButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@android:color/transparent"
            android:paddingTop="4dp"
            android:text="@string/juices"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/liqueursLayout"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/syrupsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/liqueursButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_liqueurs"
            android:tint="@color/primaryText"
            android:visibility="visible"
            app:fabSize="normal"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="303dp">

        </android.support.design.widget.FloatingActionButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@android:color/transparent"
            android:paddingTop="4dp"
            android:text="@string/liqueurs"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/miscellaneousLayout"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="180dp"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/miscellaneousButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_misc"
            android:tint="@color/primaryText"
            android:visibility="visible"
            app:fabSize="normal"
            tools:layout_editor_absoluteX="112dp"
            tools:layout_editor_absoluteY="332dp">

        </android.support.design.widget.FloatingActionButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@android:color/transparent"
            android:paddingTop="4dp"
            android:text="@string/miscellaneous"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sweetsLayout"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="180dp"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/sweetsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_sweets"
            android:tint="@color/primaryText"
            android:visibility="visible"
            app:fabSize="normal"
            tools:layout_editor_absoluteX="232dp"
            tools:layout_editor_absoluteY="332dp">

        </android.support.design.widget.FloatingActionButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@android:color/transparent"
            android:paddingTop="4dp"
            android:text="@string/sweets"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/syrupsLayout"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="140dp"
        android:orientation="vertical"
        android:translationZ="1dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/syrupsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_syrups"
            android:tint="@color/primaryText"
            android:visibility="visible"
            app:fabSize="normal"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="361dp">

        </android.support.design.widget.FloatingActionButton>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@android:color/transparent"
            android:paddingTop="4dp"
            android:text="@string/syrups"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="12sp" />
    </LinearLayout>

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        class="android.support.constraint.Barrier"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ=".5dp"
        android:visibility="visible" />

</android.support.constraint.ConstraintLayout>
